<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/convert_activity_lay"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".Activitys.ConvertActivity">

    <TextView
        android:id="@+id/tv_amount_to_convert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/convert_first_text"
        android:textSize="@dimen/big_text_size_start_activity"
        android:textAlignment="center"
        android:text="@string/text_amount_to_convert" />

    <EditText
        android:id="@+id/et_amount_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_amount_to_convert"
        android:layout_margin="@dimen/view_margin"
        android:hint="@string/hint"
        android:textAlignment="center"
        android:ems="14"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:id="@+id/convert_items_layout"
        android:layout_below="@+id/et_amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="2">

        <LinearLayout
            android:layout_margin="@dimen/view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_convert_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size_start_activity"
                android:text="@string/text_convert_from"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/sp_convert_from"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="@dimen/view_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_convert_to"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/normal_text_size_start_activity"
                android:text="@string/text_convert_to"
                android:layout_weight="1"/>

            <Spinner
                android:id="@+id/sp_convert_to"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_convert"
        android:layout_below="@+id/convert_items_layout"
        android:layout_margin="@dimen/button_margin"
        android:background="@drawable/btn_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_convert_btn" />

</RelativeLayout>