<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".Activitys.StartActivity">

   <TextView
       android:id="@+id/tv_balance"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_margin="@dimen/view_margin"
       android:text="@string/text_start"
       android:textAlignment="center"
       android:textSize="@dimen/big_text_size_start_activity"/>

   <LinearLayout
       android:id="@+id/balance_items"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_marginTop="150dp"
       android:paddingBottom="25dp"
       android:gravity="center"
       android:orientation="vertical"
       android:weightSum="1">

      <TextView
          android:id="@+id/tv_eur"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="@dimen/tv_padding_start_activity"
          android:text="EUR: 9000"
          android:textAlignment="center"
          android:textSize="@dimen/normal_text_size_start_activity" />

      <TextView
          android:id="@+id/tv_usd"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="@dimen/tv_padding_start_activity"
          android:text="USD: 100"
          android:textAlignment="center"
          android:textSize="@dimen/normal_text_size_start_activity" />

      <TextView
          android:id="@+id/tv_jpy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:padding="@dimen/tv_padding_start_activity"
          android:text="JPY: 15000"
          android:textAlignment="center"
          android:textSize="@dimen/normal_text_size_start_activity" />

   </LinearLayout>

   <Button
       android:id="@+id/btn_convert"
       android:layout_below="@+id/balance_items"

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/view_margin"
       android:background="@drawable/btn_background"
       android:text="@string/text_convert_btn"
       />

   <Button
       android:id="@+id/btn_commissions"
       android:layout_below="@+id/btn_convert"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/view_margin"
       android:background="@drawable/btn_background"
       android:text="@string/text_commission_btn"/>

</RelativeLayout>